# rust-build-test

./: .gitignore  Cargo.toml  Dockerfile  README-DEV.md  README.md
.github/workflows/: build-test.yml
docs/: downloading.md
examples/: dl-blocking.rs  dl.rs
src/: backoff.rs  client_builder.rs  destination.rs  error.rs  file_info.rs  lib.rs
src/blocking/: client.rs  client_builder.rs  download.rs  mod.rs  tests.rs
src/blocking/imp/: blocking_token_bucket.rs  mod.rs  std_file.rs  std_system.rs  ureq_client.rs
src/handles/: mod.rs  progress.rs  result.rs  retry.rs
src/headers/: content_range.rs  mod.rs
src/limiter/: mod.rs
src/maybe_async/: file.rs  http_client.rs  limiter.rs  mod.rs  system.rs
src/nonblocking/: client.rs  download.rs  mod.rs  tests.rs
src/nonblocking/imp/: mod.rs  reqwest_client.rs  tokio_file.rs  tokio_system.rs  tokio_token_bucket.rs
src/shared/: download.rs  download_config.rs  head.rs  mod.rs
src/utils/: file.rs  http.rs  into_uri.rs  mod.rs
test-support/: docker-compose.yml
tests/integration/: constants.rs  mod.rs
tests/integration/blocking/: basic.rs  limiter.rs  mod.rs
tests/integration/nonblocking/: basic.rs  fuzz.rs  limiter.rs  mod.rs  performance.rs  resume.rs
tests/integration/utils/: mod.rs  progress_recorder.rs
