[package]
name = "downlowd"
version = "0.1.1"
edition = "2024"
authors = ["Jason Walton <dev@lucid.thedreaming.org>"]
description = "Download files with automatic retries and resumes."
keywords = ["download", "http"]
categories = ["web-programming::http-client"]
repository = "https://github.com/jwalton/rs-downlowd"
license = "MIT"

[dependencies]
bytes = "1.10.1"
http = "1.4.2"
sync_executor = "0.1.0"
reqwest = { version = "0.12.22", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["fs", "macros"], optional = true }
ureq = { version = "3.1.2", optional = true }
url = { version = "2.5.7", optional = true }
urlencoding = "2.1.3"

[dev-dependencies]
httptest = "0.16.3"
indicatif = "0.18.0"
rand = "0.9.2"
temp-dir = "0.1.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "time", "net"] }
tokio-test = "0.4.4"
ureq = "3.1.2"

[features]
default = ["async"]
async = ["dep:tokio", "dep:reqwest", "dep:url"]
blocking = ["dep:ureq"]

[[example]]
name = "dl"

[package.metadata.docs.rs]
all-features = true